--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -30,10 +30,10 @@
 
 					<header class="">
 							<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-								<a href="/" class="flex items-center mb-4 md:mb-0  z-10">
-									<img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+								<a href="/" class="flex items-center mb-4 md:mb-0 xl:-mb-8 z-10">
+									<img class="w-1/6 xl:w-1/4 xl:mt-2 -mt-2" src="../public/img/vinci-logo.png" alt="">
 								</a>
-								<nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+								<nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold xl:text-3xl">
 									<a href="/about" class="mr-5 hover:text-gray-900 hover:bg-gray-100">About</a>
 									<a href="/services" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Solutions</a>
 									<a href="/partners" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Partners</a>
@@ -137,52 +137,82 @@
 			</section>
 
 
-			<section class="panel">
 				<!--==================
 				 FOOTER SECTION
 				==================-->
 
-				<section class="bg-secondary">
-           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-             <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
-             <div class="flex flex-col justify-center mt-24">
-             <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
-             <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
-             <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
-             </div>
-             <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
-               <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
-                 <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+				<section class="panel">
+          <section class="bg-secondary panel">
+             <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+               <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
+               <div class="flex flex-col justify-center mt-32 xl:mt-40">
+                  <a class="flex flex-col justify-center" href="/blogs">
+                    <button class="w-1/4 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg xl:text-3xl">Check Out Our Blogs</button>
+                  </a>
+                  <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+                  <a class="flex flex-col justify-center" href="/contact">
+                  <button class=" w-1/4 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg xl:text-3xl">Reach Out To Us</button>
+                  </a>
                </div>
-               <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
-                 <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-                   <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
-                   <nav class="list-none mb-10 -mt-24">
-                     <li>
-                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
-                     </li>
-                     <li>
-                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
-                     </li>
-                     <li>
-                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
-                     </li>
-                     <li>
-                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/careers">CAREERS</a>
-                     </li>
-                     <li>
-                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
-                     </li>
-                     <li>
-                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href=/contact"">CONTACT</a>
-                     </li>
-                   </nav>
+               <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+                 <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+                   <img class="-mt-2 xl:mt-20" src="../public/img/vinci-logo.png" alt="">
+                 </div>
+                 <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+                   <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                     <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+                     <nav class="list-none mb-10 -mt-24 xl:text-xl xl:-mt-12">
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
+                       </li>
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
+                       </li>
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
+                       </li>
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer">CAREERS</a>
+                       </li>
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
+                       </li>
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/contact">CONTACT</a>
+                       </li>
+                     </nav>
+                   </div>
                  </div>
                </div>
-             </div>
-           </footer>
+
+               <div class="tres-footer">
+                 <div class="container mx-auto py-8 px-5 flex flex-wrap flex-col sm:flex-row">
+                   <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
+                     <a href="http://www.tresstudios.dev/" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
+                   </p>
+                   <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+                     <a class="text-gray-500">
+                       <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                         <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                       </svg>
+                     </a>
+                     <a class="ml-3 text-gray-500">
+                       <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                         <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+                       </svg>
+                     </a>
+                     <a class="ml-3 text-gray-500">
+                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                         <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                         <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                       </svg>
+                     </a>
+                   </span>
+                 </div>
+               </div>
+             </footer>
+          </section>
         </section>
-			</section>
 			</div>  <!-- end of desktop main container -->
 
 
